<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#333333"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@drawable/news_list_item_view_background">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/news_feed_image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            tools:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:contentDescription="@string/app_name"
            android:transitionName="@string/image_view_transition_name" />

        <TextView
            android:id="@+id/news_feed_text_view"
            android:layout_below="@id/news_feed_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/gibberish"
            android:layout_margin="12dp"
            android:padding="8dp"
            android:background="@drawable/news_list_item_view_text_background"
            android:textColor="@android:color/white"
            android:textSize="16sp"
             />

    </RelativeLayout>

</RelativeLayout>