<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_activity_background"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_title"
        android:textSize="80sp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="48dp"
        android:transitionName="@string/title_transition_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="70dp"
        android:layout_marginTop="150dp"
        android:id="@+id/login_container"
        android:orientation="vertical"
        android:visibility="invisible"
        android:layout_centerInParent="false"
        android:background="@drawable/form">

        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:tabIndicatorHeight="0dp"
            app:tabTextColor="@color/tab_normal"
            app:tabSelectedTextColor="@android:color/black"
            app:tabGravity="center">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup" />
        </android.support.design.widget.TabLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:background="@android:color/black" />

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_pager">

        </android.support.v4.view.ViewPager>

    </LinearLayout>


</RelativeLayout>