<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_fragment"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp">

    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        app:mtf_image="@drawable/ic_action_name"
        app:mtf_labelColor="#666"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:id="@+id/email"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textStyle="bold"
            android:textColor="#333"
            android:textSize="12sp"
            android:inputType="textEmailAddress" />

    </com.github.florent37.materialtextfield.MaterialTextField>


    <com.github.florent37.materialtextfield.MaterialTextField
        android:layout_width="match_parent"
        app:mtf_image="@drawable/ic_password_image"
        app:mtf_labelColor="#666"
        android:id="@+id/password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColor="#333"
            android:textStyle="bold"
            android:textSize="12sp"
            android:inputType="textPassword" />

    </com.github.florent37.materialtextfield.MaterialTextField>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:background="@drawable/button_background" />

    <TextView
        android:id="@+id/register_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:textColor="#333"
        android:text="@string/register_prompt" />

</LinearLayout>