<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:background="@drawable/about_us_background"
        android:orientation="vertical"
        android:elevation="4dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:src="@drawable/about_us_image"
            android:layout_marginTop="24dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#dddddd"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_heading"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:textSize="32sp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/yuii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/about_us_details"
                android:textAlignment="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textColor="#666666"
                android:textStyle="italic|bold"
                android:textSize="18sp"
                />

            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/newsapi"
                android:textSize="24sp"
                android:textStyle="italic"
                android:textColor="@android:color/black"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:gravity="center"
                android:textSize="24sp"
                android:textStyle="italic"
                android:textColor="#888888"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp">

                <ImageView
                    android:id="@+id/email_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginRight="24dp"
                    android:src="@drawable/gmail_icon"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fb_image"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginRight="18dp"
                    android:src="@drawable/fb_icon"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/whatsapp_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_marginRight="4dp"
                    android:src="@drawable/whatsapp_icon"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/copyright"
            android:textSize="16sp"
            android:gravity="center"
            android:paddingBottom="12dp"/>

    </LinearLayout>

</RelativeLayout>