<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewsDetailDisplayActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/back_button"
            android:layout_margin="4dp"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/transparent_back_button"
            />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/news_detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:src="@mipmap/ic_launcher"
            android:scaleType="centerCrop"
            android:transitionName="@string/image_view_transition_name" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="16dp"
        android:paddingBottom="4dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/news_detail_title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Hsaducudiygcicicgidbcagcasiaibiasigasi"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:gravity="center" />

            <TextView
                android:id="@+id/news_detail_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="10"
                tools:text="@string/gibberish"
                android:textSize="16sp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/read_more_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="8dp"
                android:text="@string/read_more"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

        </LinearLayout>

            <TextView
                android:id="@+id/source_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:layout_alignParentBottom="true"
                tools:text="Source: and Author:"/>


    </RelativeLayout>

</LinearLayout>